# tapnet

./: .gitmodules  README.md  evaluation_datasets.py  experiment.py  kubric_task.py  live_demo.py  optimizers.py  pyproject.toml  requirements.txt  requirements_inference.txt  supervised_point_prediction.py  tapir_clustering.py  tapir_model.py  tapnet_model.py  task.py
checkpoints/train/: events.out.tfevents.1660568712.lmarkeeva.c.googlers.com.2356350.0.v2  events.out.tfevents.1660578739.lmarkeeva.c.googlers.com.2691856.0.v2  events.out.tfevents.1660584161.lmarkeeva.c.googlers.com.2827909.0.v2  events.out.tfevents.1660584547.lmarkeeva.c.googlers.com.2838899.0.v2
colabs/: causal_tapir_demo.ipynb  kubric_for_tapvid(3d).ipynb  optical_flow_track_assist.ipynb  tapir_clustering.ipynb  tapir_demo.ipynb  tapir_rainbow_demo.ipynb  tapnext_demo.ipynb  torch_causal_tapir_demo.ipynb  torch_tapir_demo.ipynb  torch_tapnext_demo.ipynb  torch_tapnextpp_demo.ipynb  trajan_demo.ipynb
configs/: causal_tapir_config.py  tapir_bootstrap_config.py  tapir_config.py  tapnet_config.py
data/: README.md  download_kinetics_videos.sh  generate_kinetics.py  generate_tapnet.py  generate_tapvid.py  requirements.txt  visualize.py  visualize.sh  visualize_kinetics.py  visualize_pickle.py  viz_utils.py
models/: resnet.py  tsm_resnet.py  tsm_utils.py
tapnet/: __init__.py  evaluation_datasets.py  experiment.py  live_demo.py  optimizers.py  pytorch_live_demo.py  supervised_point_prediction.py  tapir_clustering.py
tapnet/models/: resnet.py  ssm_vit.py  tapir_model.py  tapnet_model.py  tsm_resnet.py  tsm_utils.py  video_ssm_tracker.py
tapnet/robotap/: tapir_clustering.py
tapnet/tapnext/: losses.py  pscan.py  tapnext_benchmark_pytorch.ipynb  tapnext_lru_modules.py  tapnext_original_demo.ipynb  tapnext_torch.py  tapnext_torch_utils.py  torch_losses.py
tapnet/tapnextpp/: README.md
tapnet/tapvid/: README.md  download_kinetics_videos.sh  evaluation_datasets.py  generate_tapvid.py  visualize.py
tapnet/tapvid3d/: LICENSE  README.md  generate_all.sh  requirements_eval.txt  requirements_generation.txt
tapnext/: tapnext_benchmark_pytorch.ipynb  tapnext_torch.py  tapnext_torch_utils.py
tapvid/: README.md  download_kinetics_videos.sh  visualize.py
tapvid3d/: README.md  requirements_eval.txt  requirements_generation.txt
torch/: nets.py  tapir_model.py  utils.py
trajan/: __init__.py  track_autoencoder.py
utils/: experiment_utils.py  model_utils.py  transforms.py  viz_utils.py
(+41 files in other folders)
